# safepath_v1

./: .gitignore  Cargo.toml  README.md  Safepath_Audit_Report.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
crates/safepath-core/: Cargo.toml
crates/safepath-core/src/: analyzer.rs  duplicate_config.rs  evaluation.rs  executor.rs  history.rs  learner.rs  lib.rs  pathing.rs  planner.rs  presets.rs  rules.rs  scanner.rs  templates.rs  test_data.rs  types.rs
crates/safepath-store/: Cargo.toml
crates/safepath-store/src/: analysis.rs  cache_pruning.rs  execution.rs  hash_cache.rs  history.rs  learner.rs  lib.rs  manifest.rs  migrations.rs  plans.rs  presets.rs  protection.rs  scan_jobs.rs  util.rs  (+2 more)
docs/: MAC_INSTALLER.md  TESTING.md  USER_GUIDE.md  design-parity.md
scripts/: build-mac-installer.sh
src/: App.css  App.test.tsx  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  permissions.rs
src-tauri/src/commands/: app.rs  execution.rs  learner.rs  mod.rs  planning.rs  review.rs  scan.rs  test_data.rs
src/lib/: tauri.ts  tauriE2eMock.ts
src/shell/: AppLayout.tsx  getWorkflowPhaseLabel.test.ts  getWorkflowPhaseLabel.ts
src/types/: app.ts  duplicateConfig.test.ts  duplicateConfig.ts
tests/e2e/: a11y-basics.spec.ts  analysis-caveats-mock.spec.ts  app-shell.spec.ts  duplicate-keeper-mock.spec.ts  workflow-execute.spec.ts  workflow-happy-path.spec.ts
(+27 files in other folders)
