[workspace]
members = ["crates/safepath-core", "crates/safepath-store", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["siggewidmark"]

[workspace.dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tauri-build = { version = "2" }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
