[package]
name = "safepath-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
safepath-core = { path = "../crates/safepath-core" }
safepath-store = { path = "../crates/safepath-store" }
uuid.workspace = true
