[package]
name = "safepath-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
chrono = "0.4.44"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
kamadak-exif = "0.6.1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
walkdir.workspace = true
